// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`masked-input [snapshot] > renders correctly 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <input
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`masked-input [snapshot] > renders correctly with a mask 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <input
    aria-label="Activation code"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    placeholder=" "
    type="text"
  />
</div>
`;
